--- a/src/Component/Homepage.css
+++ b/src/Component/Homepage.css
@@ -4,6 +4,11 @@
     margin: 0;
 }
 
+.Homepage_first{
+    margin-left: 7rem;
+    zoom: 1.1;
+}
+
 .navbar {
     height: 60px;
     width: 1090px;
@@ -170,11 +175,15 @@
     margin-left: 141px;
 }
 
+
 /* second section */
+
 
 .Homepage_second {
     margin-top: -250px;
     display: flex;
+    margin-left: 8rem;
+    zoom: 1.1;
 }
 
 .Homepage_second-img>div:nth-child(1) {
